# huobi-chain

./: .gitignore  Cargo.toml  Makefile  jenkins-x-pr-build.yml
CHANGELOG/: CHANGELOG-0.5.md
config/: chain.toml  genesis.toml
config/transfer_quota/: genesis.toml
devtools/docker-compose/: node-1-chain.toml  node-2-chain.toml  node-3-chain.toml  node-4-chain.toml
docs/: getting_started.md  intro.md  sidebar.md
services/admission_control/: Cargo.toml
services/admission_control/src/: lib.rs  tests.rs
services/asset/: Cargo.toml
services/asset/src/: lib.rs  types.rs
services/asset/src/tests/: asset_without_transfer_quota.rs  mod.rs
services/authorization/: Cargo.toml
services/authorization/src/: lib.rs
services/governance/: Cargo.toml
services/governance/src/: lib.rs
services/governance/src/tests/: mod.rs
services/kyc/: Cargo.toml
services/kyc/src/: error.rs  lib.rs  tests.rs  types.rs
services/kyc/src/expression/: evaluation.rs  mod.rs  node.rs  token.rs  types.rs
services/kyc/src/expression/tests/: mod.rs
services/metadata/: Cargo.toml
services/metadata/src/: lib.rs
services/metadata/src/tests/: mod.rs
services/node_manager/: Cargo.toml
services/riscv/: Cargo.toml
services/riscv/src/: authorization.rs  error.rs  lib.rs  types.rs
services/riscv/src/tests/: duktape.rs  mod.rs
services/riscv/src/vm/: chain_interface.rs  interpreter.rs
services/riscv/src/vm/syscall/: assert.rs  chain_interface.rs  debug.rs  environment.rs
services/timestamp/: Cargo.toml
services/timestamp/src/: lib.rs  tests.rs
services/transfer_quota/: Cargo.toml
services/transfer_quota/src/: lib.rs  types.rs
services/transfer_quota/src/tests/: mod.rs
src/: main.rs
tests/e2e/: .gitignore  asset.test.ts  basic.test.ts  genesis.toml  helper.ts  jest.config.js  node_manager.test.ts  package-lock.json  package.json  riscv.test.ts  tsconfig.json  utils.ts  wait-for-it.sh
tests/e2e/change_validators/templates/: chain.toml.template  genesis.toml.template
tests/e2e/config/: chain.toml  genesis.toml
tests/e2e/riscv_contracts/: contract_test  contract_test.c
tests/e2e/src/: asset.test.ts  basic.test.ts  governance.test.ts  governance2.test.ts.bk  kyc.test.ts  riscv.test.ts  riscv.test.ts.bk
tests/e2e/src/common/: helper.ts  utils.ts
tests/integration/: mod.rs
