[package]
name = "huobi-chain"
version = "0.5.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

[dependencies]
muta = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste", features = ["random_leader"]}
protocol = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste", package = "muta-protocol" }
multi-signature = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste"}

derive_more = "0.99"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util"]}
clap = "2.33"
mimalloc = { version = "0.1", default-features = false }

authorization = { path = "services/authorization" }
metadata = { path = "services/metadata" }
asset = { path = "services/asset" }
kyc = { path = "services/kyc" }
riscv = { path = "services/riscv" }
admission_control = { path = "services/admission_control" }
governance = { path = "services/governance" }
timestamp = {path = "services/timestamp"}
transfer_quota = {path = "services/transfer_quota" }

[dev-dependencies]
bytes = "0.5"
cita_trie = "2.0"
async-trait = "0.1"
hex = "0.4"
toml = "0.5"
lazy_static = "1.4"
muta-codec-derive = "0.2"
rlp = "0.4"
framework = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste"}
serde_json = "1.0"
serde = "1.0"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1

[workspace]
members = [
  "services/authorization",
  "services/metadata",
  "services/riscv",
  "services/asset",
  "services/kyc",
  "services/admission_control",
  "services/governance",
  "services/timestamp",
  "services/transfer_quota",
]

[[bin]]
name = "huobi-chain-payment"
