[package]
name = "asset"
version = "0.5.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
protocol = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session", package = "muta-protocol" }
binding-macro = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
muta-codec-derive = "0.2"
transfer_quota = {path = "../transfer_quota"}
kyc = {path = "../kyc"}
timestamp = {path="../timestamp"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.15"
byteorder = "1.3"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
lazy_static = "1.4"
framework = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
core-storage = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
