[package]
name = "authorization"
version = "0.1.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", rev = "b7ceda0"}
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "b7ceda0", package = "muta-protocol" }
binding-macro = { git = "https://github.com/nervosnetwork/muta", rev = "b7ceda0" }
multi-signature = { git = "https://github.com/nervosnetwork/muta", rev = "b7ceda0" }

admission_control = { path = "../admission_control" }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
core-storage = { git = "https://github.com/nervosnetwork/muta", rev = "b7ceda0" }
framework = { git = "https://github.com/nervosnetwork/muta", rev = "b7ceda0" }
cita_trie = "2.0"
rand = "0.7"
