[package]
name = "authorization"
version = "0.5.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc"}
# protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc", package = "muta-protocol" }
# binding-macro = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc" }
# multi-signature = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc" }
multi-signature = { path = "../../../muta-chain/built-in-services/multi-signature" }
muta = { path = "../../../muta-chain", features = ["random_leader"] }
protocol = { path = "../../../muta-chain/protocol", package = "muta-protocol" }
binding-macro = { path = "../../../muta-chain/binding-macro" }

admission_control = { path = "../admission_control" }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
core-storage = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0"}
framework = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0"}
cita_trie = "2.0"
rand = "0.7"
