[package]
name = "kyc"
version = "0.5.0"
authors = ["nervosnetwork <liang2929@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
muta-codec-derive = "0.2"
hex = "0.4"

muta = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session"}
protocol = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session", package = "muta-protocol" }
binding-macro = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"

framework = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session"}
core-storage = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
