[package]
name = "node_manager"
version = "0.3.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.2-beta1"}
protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.2-beta1", package = "muta-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.15"
byteorder = "1.3"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
hex = "0.4"
toml = "0.5"
framework = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.2-beta1"}
metadata = { path = "../metadata" }

