[package]
name = "riscv"
version = "0.5.0-rc.2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc.2.1"}
protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc.2.1", package = "muta-protocol" }
binding-macro = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc.2.1" }

admission_control = { path = "../admission_control"}
asset = { path = "../asset" }
governance = { path = "../governance" }
kyc = { path = "../kyc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
derive_more = "0.99"
byteorder = "1.3"
ckb-vm = { version = "0.19", features = ["asm"] }
hex = "0.4"
log = "0.4"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
metadata = { path = "../metadata" }
framework = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc.2.1" }
core-storage = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc.2.1" }
env_logger = "0.7.1"
