[package]
name = "riscv"
version = "0.5.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste"}
protocol = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste", package = "muta-protocol" }
binding-macro = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste" }

admission_control = { path = "../admission_control"}
asset = { path = "../asset" }
governance = { path = "../governance" }
kyc = { path = "../kyc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
derive_more = "0.99"
byteorder = "1.3"
ckb-vm = { version = "0.19", features = ["asm"] }
hex = "0.4"
log = "0.4"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0"}
core-storage = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0"}
metadata = { path = "../metadata" }
framework = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste" }
core-storage = { git = "https://github.com/zeroqn/muta", branch = "perf-expirement-taste" }
env_logger = "0.7.1"
