[package]
name = "timestamp"
version = "0.5.0"
authors = ["LycrusHamster <liang2929@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
protocol = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session", package = "muta-protocol" }
binding-macro = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
derive_more = "0.99"
hex = "0.4"
log = "0.4"
muta-codec-derive = "0.2"
bytes = "0.5"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
core-storage = { git = "https://github.com/zeroqn/muta", branch = "fix-network-unidentified-session" }
env_logger = "0.7.1"
lazy_static = "1.4"
